--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	dependencies {
-		classpath 'com.rapidminer.gradle:gradle-plugin:0.1.0-SNAPSHOT'
+		classpath 'com.rapidminer.gradle:gradle-plugin:0.1.0'
 	}
 }
 
