--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ gradlePlugin {
 dependencies {
 	compile 'com.rapidminer.gradle:release:0.1.2'
 	compile 'com.rapidminer.gradle:publish:0.1.1'
+	compile 'com.rapidminer.gradle:code-quality:0.2.0'
 }
