--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,5 @@ gradlePlugin {
 
 dependencies {
 	compile 'com.rapidminer.gradle:release:0.2.0-SNAPSHOT'
-	compile 'com.rapidminer.gradle:code-quality:0.2.2'
+	compile 'com.rapidminer.gradle:code-quality:0.2.3-SNAPSHOT'
 }
