--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ gradlePlugin {
 }
 
 dependencies {
-	compile 'com.rapidminer.gradle:release:0.2.0'
-	compile 'com.rapidminer.gradle:code-quality:0.2.3'
+	compile 'com.rapidminer.gradle:release:0.2.+'
+	compile 'com.rapidminer.gradle:code-quality:0.3.+'
+	compile 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.+'
 }
