Fixes MissingPropertyException in case publishing to remote Maven repository task is not configured yet

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ gradlePlugin {
 }
 
 dependencies {
-	compile 'com.rapidminer.gradle:release:0.2.+'
-	compile 'com.rapidminer.gradle:code-quality:0.3.+'
-	compile 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.+'
+	compile 'com.rapidminer.gradle:release:0.2.1'
+	compile 'com.rapidminer.gradle:code-quality:0.3.6'
+	compile 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.1'
 }
