--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
-plugins {
-	id 'com.rapidminer.gradle-plugin' version '0.2.9'
+buildscript {
+	dependencies {
+		classpath 'com.rapidminer.gradle:gradle-plugin:0.3.+'
+	}
 }
+
+apply plugin: 'com.rapidminer.gradle-plugin'
 
 gradlePlugin {
 	id 'gradle-plugin'
+	description 'The \'com.rapidminer.gradle-plugin\' is a meta plugin which bundles configuration for all RapidMiner Gradle plugins.'
 }
 
 dependencies {
